k8/prod/shared/ingress/test-host.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inaya
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.inaya.io
      $patch: merge
      http:
        paths:
          - backend:
              service:
                name: test-inaya
                port:
                  number: 80
            pathType: Prefix
            path: /
